--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 </head>
 
 <body>
-  <a id="origamid" href="http://www.origamid.com">Origamid</a>
-
+  <a href="" class="link">Home</a>
+  <a href="" class="link">Produtos</a>
+  <button class="link">Login</button>
   <script src="./script.js"></script>
 </body>
 
