--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
       font-size: 1.25rem;
       font-family: sans-serif;
       margin: 2rem;
+      height: 1rem;
+    }
+
+    button {
+      font-size: 1.5rem;
     }
   </style>
 </head>
 
 <body>
-  <a href="" class="link">Home</a>
-  <a href="" class="link">Produtos</a>
-  <button class="link">Login</button>
+  <button>Login</button>
   <script src="./script.js"></script>
 </body>
 
