--- a/index.html
+++ b/index.html
@@ -11,33 +11,36 @@
       font-size: 1.25rem;
       font-family: sans-serif;
       margin: 2rem;
-      height: 1rem;
     }
 
-    button {
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+
+    input {
       font-size: 1.5rem;
+      margin-bottom: 1rem;
+      padding: 0.5rem;
+      min-width: 50vw;
+      max-width: 100%;
     }
   </style>
+
 </head>
 <link rel="stylesheet" href="style.css">
 
 <body>
-  <header id="header">
-    <a id="logo" href="">Logo</a>
-    <nav id="nav">
-      <button aria-label="Abrir Menu" aria-expanded="false" aria-haspopup="true" aria-controls="menu" id="btn-mobile">
-        Menu
-        <span id="hamburger"></span>
-      </button>
-      <ul id="menu" role="menu">
-        <li><a href="/">Sobre</a></li>
-        <li><a href="/">Produtos</a></li>
-        <li><a href="/">Portfólio</a></li>
-        <li><a href="/">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
 
+
+  <form action="" id="form">
+    <label for="nome">Nome</label>
+    <input type="text" id="nome" name="nome" />
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" />
+    <label for="cpf">CPF</label>
+    <input type="text" id="cpf" name="cpf" />
+  </form>
 
 
   <script src="./script.js"></script>
