--- a/index.html
+++ b/index.html
@@ -33,17 +33,7 @@
 <body>
 
 
-  <form action="" id="form">
-    <label for="nome">Nome</label>
-    <input type="text" id="nome" name="nome" />
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" />
-    <label for="cpf">CPF</label>
-    <input type="text" id="cpf" name="cpf" />
-  </form>
-
-
-  <script src="./script.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 
 </html>
