--- a/index.html
+++ b/index.html
@@ -6,34 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Typescript</title>
-  <style>
-    body {
-      font-size: 1.25rem;
-      font-family: sans-serif;
-      margin: 2rem;
-    }
 
-    label {
-      display: block;
-      margin-bottom: 0.5rem;
-    }
-
-    input {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      padding: 0.5rem;
-      min-width: 50vw;
-      max-width: 100%;
-    }
-  </style>
 
 </head>
 <link rel="stylesheet" href="style.css">
 
 <body>
-
-
-  <script type="module" src="./script.js"></script>
+  <h1>Slide Stories</h1>
+  <div id="slide">
+    <div id="slide-elements">
+      <img class="active" src="./assets/imagem_1.jpg" alt="Lobo">
+      <img src="./assets/imagem_2.jpg" alt="Lobo">
+      <img src="./assets/imagem_3.jpg" alt="Lobo">
+      <video playsinline src="./assets/video.mp4"></video>
+    </div>
+    <div id="slide-controls"></div>
+  </div>
+  <script type="module" src="./src/script.js"></script>
 </body>
 
 </html>
